--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,34 @@
-/target/
+target/
+.settings/
+.checkstyle
+
 .classpath
 .project
-.settings
-target
+*.iml
+
+.idea
+build/
 
 bluez-dbus-osgi/META-INF
+
+#gradle
+.gradle
+**/build/
+!src/**/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+
+# Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
+
+
+
+
