--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ bluez-dbus-osgi/META-INF
 #gradle
 .gradle
 **/build/
-!src/**/build/
+# !src/**/build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
