--- a/settings.gradle
+++ b/settings.gradle
@@ -18,7 +18,7 @@ pluginManagement {
 
 }
 
-rootProject.name = 'dbus-java-parent'
+rootProject.name = 'bluez-dbus-parent'
 
 include 'bluez-dbus-platform',
         'bluez-dbus' /*,
