--- a/bluez-dbus/build.gradle
+++ b/bluez-dbus/build.gradle
@@ -1,9 +1,11 @@
+import org.apache.tools.ant.taskdefs.condition.Os
+
 plugins {
     id 'java-library'
     id 'java-test-fixtures'
     id 'io.wusa.semver-git-plugin'
     id 'maven-publish'
-    id 'io.freefair.lombok'
+    // id 'io.freefair.lombok'
 }
 
 description = 'Evolution of github.com:hypfvieh/bluez-dbus.git [gradle, java 11, windows compat] -- library'
@@ -48,7 +50,9 @@ dependencies {
 }
 
 tasks.withType(Test) {
-    environment 'DBUS_SESSION_BUS_ADDRESS', 'tcp:host=localhost,port=54321,family=ipv4'
+    if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+        environment 'DBUS_SESSION_BUS_ADDRESS', 'tcp:host=localhost,port=54321,family=ipv4'
+    }
 }
 
 // publishing
