--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,11 @@ plugins {
 
 description = 'Evolution of github.com:hypfvieh/bluez-dbus.git [gradle, java 11, windows compat]'
 
-// version from git
-version = semver.info
-
 allprojects { Project prj ->
     prj.group = 'com.gpaglia.bluez'
     prj.version = '0.1.0-SNAPSHOT'  // default if no semver
     prj.getPlugins().withId('io.wusa.semver-git-plugin') {
-        prj.version = semver.info
+        prj.version = semver.info.toString()
         prj.semver {
             branches {
                 branch {
@@ -28,6 +25,10 @@ allprojects { Project prj ->
 }
 
 subprojects { Project subp ->
+    subp.getPlugins().withId('application') {
+        subp.application.getMainClass().set(project.hasProperty("mainClass") ? getProperty("mainClass") : "NULL")
+    }
+
     subp.getPlugins().withId('java') {
         // set java version and other standards for projects with java plugin installed
         subp.java {
@@ -35,6 +36,8 @@ subprojects { Project subp ->
             targetCompatibility = JavaVersion.VERSION_11
             withJavadocJar()
             withSourcesJar()
+            // modularity not (yet) enabled
+            // modularity.inferModulePath = true
         }
 
         subp.tasks.withType(JavaCompile) {
@@ -51,6 +54,8 @@ subprojects { Project subp ->
             useJUnitPlatform {
                 // options here
             }
+            testLogging.showStandardStreams = true
+            testLogging.exceptionFormat = 'full'
         }
 
         subp.tasks.withType(Javadoc) {
@@ -59,18 +64,33 @@ subprojects { Project subp ->
 
         subp.afterEvaluate {Project p ->
             p.task(type: Jar, 'testJar') {
+                group = 'build'
                 archiveClassifier.set('tests')
                 from p.sourceSets.test.output
             }
+            if (! subp.getName().endsWith('osgi')) {
+                artifacts {
+                    archives sourcesJar, javadocJar, testJar
+                }
+            }
 
-            p.jar.dependsOn testJar
-        }
-    }
+            // publishing
+            p.publishing {
+                publications.create("publish-${p.name}", MavenPublication) {
+                    artifact jar
+                    if (! p.getName().endsWith('osgi')) {
+                        artifact sourcesJar
+                        artifact javadocJar
+                        artifact testJar
+                    }
+                }
 
-    subp.getPlugins().withId('io.freefair.lombok') {
-        subp.lombok {
-            it.config['lombok.log.fieldName'] = 'LOGGER'
+                repositories {
+                    mavenLocal()
+                }
+            }
         }
+
     }
 
     // configure repositories
