--- a/bluez-dbus-platform/platform.gradle
+++ b/bluez-dbus-platform/platform.gradle
@@ -7,7 +7,7 @@ ext {
     bluez__bndPluginVersion = '5.2.0'
 
     // dbus-java
-    bluez__dbusJavaVersion = '3.3.0+build.441.sha.d71cb67-SNAPSHOT'
+    bluez__dbusJavaVersion = '3.3.0-SNAPSHOT.GP.1'
 
     // https://mvnrepository.com/artifact/com.github.hypfvieh/java-utils
     bluez__hypfviehUtilsVersion = '1.0.6'
