updated dependencies (api, implementation) and publishing logic (from components.java)

--- a/build.gradle
+++ b/build.gradle
@@ -77,12 +77,9 @@ subprojects { Project subp ->
             // publishing
             p.publishing {
                 publications.create("publish-${p.name}", MavenPublication) {
-                    artifact jar
-                    if (! p.getName().endsWith('-osgi')) {
-                        artifact sourcesJar
-                        artifact javadocJar
-                        artifact testJar
-                    }
+                    // needed to have dependencies in the pom
+                    from components.java
+                    // to be understood how to get testJar artifact published with dependencies
                 }
 
                 repositories {
