--- a/bluez-dbus/build.gradle
+++ b/bluez-dbus/build.gradle
@@ -19,13 +19,13 @@ dependencies {
     api platform(project(':bluez-dbus-platform'))
 
     // dbus-java
-    api group: 'com.gpaglia.dbus', name: 'dbus-java'
+    implementation group: 'com.gpaglia.dbus', name: 'dbus-java'
 
     // https://mvnrepository.com/artifact/com.github.hypfvieh/java-utils
-    api group: 'com.github.hypfvieh', name: 'java-utils'
+    implementation group: 'com.github.hypfvieh', name: 'java-utils'
 
     // https://mvnrepository.com/artifact/com.github.jnr/jnr-unixsocket
-    api group: 'com.github.jnr', name: 'jnr-unixsocket'
+    // api group: 'com.github.jnr', name: 'jnr-unixsocket'
 
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     implementation group: 'org.apache.commons', name: 'commons-lang3'
