--- a/build.gradle
+++ b/build.gradle
@@ -80,6 +80,14 @@ subprojects { Project subp ->
                     // needed to have dependencies in the pom
                     from components.java
                     // to be understood how to get testJar artifact published with dependencies
+                    versionMapping {
+                        usage('java-api') {
+                            fromResolutionOf('runtimeClasspath')
+                        }
+                        usage('java-runtime') {
+                            fromResolutionResult()
+                        }
+                    }
                 }
 
                 repositories {
